--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ djoser = "*"
 djangorestframework-simplejwt = "*"
 pillow = "*"
 django-cors-headers = "*"
+celery = "*"
+redis = "*"
 
 [dev-packages]
 
