add collections test

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,9 @@ redis = "*"
 flower = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-django = "*"
+pytest-watch = "*"
 
 [requires]
 python_version = "3.10"
