--- a/Pipfile
+++ b/Pipfile
@@ -17,12 +17,14 @@ django-cors-headers = "*"
 celery = "*"
 redis = "*"
 flower = "*"
+django-redis = "*"
 
 [dev-packages]
 pytest = "*"
 pytest-django = "*"
 pytest-watch = "*"
 model-bakery = "*"
+locust = "*"
 
 [requires]
 python_version = "3.10"
